build : CI/CD 파이프라인 비활성화
